--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.12.1
+  firebase_core: ^2.21.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
   go_router: ^12.1.0
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
