--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^2.21.0
   flutter:
     sdk: flutter
+  flutter_otp_text_field: ^1.1.1
   flutter_svg: ^2.0.9
   go_router: ^12.1.0
   google_sign_in: ^6.1.5
