--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  geocoding: ^2.1.1
+  geolocator: ^10.1.0
   go_router: ^12.1.0
+  http: ^1.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
